# ini

./: .gitignore  CMakeLists.txt  main.c
src/: ini.h  parser.c  parser.h
test/: main.c
